OO-6284: send mail to CP readers to notify changes